# ghc-exactprint

./: .dir-locals.el  .gitignore  .travis.yml  ChangeLog  IDEAS.md  LICENSE  Language-Haskell-GHC-ExactPrint-Annotate.html  Language-Haskell-GHC-ExactPrint-Delta.html  Language-Haskell-GHC-ExactPrint-Lookup.html  Language-Haskell-GHC-ExactPrint-Print.html  Language-Haskell-GHC-ExactPrint-Types.html  Language-Haskell-GHC-ExactPrint-Utils.html  Language-Haskell-GHC-ExactPrint.html  NEW-GHC.md  NOTES.md  README.md  ROUNDTRIP.md  TODO.md  TestTransform.hs  blacklist.txt  cabal.project  configure.sh  doc-index.html  emacs-ws-cleanup.sh  ghc-exactprint.cabal  ghc-exactprint.haddock  hackage-docs.sh  index-frames.html  index.html  mini_Language-Haskell-GHC-ExactPrint-Annotate.html  mini_Language-Haskell-GHC-ExactPrint-Delta.html  mini_Language-Haskell-GHC-ExactPrint-Lookup.html  mini_Language-Haskell-GHC-ExactPrint-Print.html  mini_Language-Haskell-GHC-ExactPrint-Types.html  mini_Language-Haskell-GHC-ExactPrint-Utils.html  mini_Language-Haskell-GHC-ExactPrint.html  mkdeps.sh  scratch.md  scratch.txt  stack-7.10.yaml  (+11 more)
.github/workflows/: haskell-ci.yml
examples/: InsertSignature.hs  RearrangeFunctions.hs  imports.hs  test.hs
hcar/: Makefile  ghcexactprint-Mg.tex
roundtrip-config/: blacklist.txt  knownfailures.txt  problems.txt
tests/: .ghci  Common.hs  Consistency.hs  Foo.hs  Play.hs  PrepareHackage.hs  QuickCheckTests.hs  Roundtrip.hs  Runner.hs  Static.hs  Test.hs  notes.txt
tests/Test/: Common.hs  CommonUtils.hs  Consistency.hs  NoAnnotations.hs  Transform.hs
tests/examples/: AddDecl.hs  AddDecl.hs.expected  AddHiding1.hs.expected  AddLocalDecl1.hs  AddLocalDecl1.hs.expected  AddLocalDecl3.hs.expected  AddLocalDecl6.hs  AddLocalDecl6.hs.expected  AltsSemis.hs  AnnPackageName.hs  Annotations.hs  Arrow2.hs  Arrows.hs  AssociatedType.hs  B.hs  Backquote.hs  BootImport.hs  BracesSemiDataDecl.hs  CExpected.hs  CloneDecl1.hs.expected  Commands.hs  CorePragma.hs  Cpp.hs  DataDecl.hs  DataFamilies.hs  Dead1.hs  Deprecation.hs  DocDecls.hs  DroppedComma.hs  DroppedDoSpace.hs  DroppedDoSpace2.hs  EmptyMostly.hs  EmptyMostly2.hs  EmptyMostlyNoSemis.hs  ExprPragmas.hs  Foo.hs  ForeignDecl.hs  FunDeps.hs.exactprinter.out  FunctionalDeps.hs  GADTContext.hs  (+113 more)
tests/examples/failing/: CppComment.hs.bad  CtorOp.hs  CtorOp.hs.bad  Deprecation.hs.bad  InfixOperator.hs  InfixOperator.hs.bad  List2.hs.bad  QuasiQuote2.hs.bad  T10970a.hs.bad  TensorTests.hs.bad  TopLevelSemis.hs  TopLevelSemis.hs.bad  UnicodeRules.hs.bad  n-plus-k-patterns.hs.bad  overloadedlabelsrun04.hs.bad  record-dot-operator-parens.hs  record-dot-operator-parens.hs.bad
tests/examples/ghc-cpp/: AffinelyExtend.hs  Algebra.hs  Base.hs  Base2.hs  CAS.hs  CFG.hs  Compat.hs  CppOld.hs  Decl.hs  Example15.hs  ExtractAbc.hs  FFI.hs  Faded.hs  HelperMain.hs  Host.hs  Initialization.hs  Lazy.hs  Lexer.hs  LowlinSpec.hs  Main.hs  Main2.hs  Main3.hs  Nats.hs  PGN.hs  Prim.hs  Promise.hs  Regions.hs  Row.hs  SLEB128.hs  Scan.hs  Server.hs  Set1.hs  TH.hs  Test1.hs  WithoutSomeFixpoints.hs  default-out.hs  fff.hs  ggg.hs  hhh.hs
tests/examples/ghc710/: BangPatterns.hs  CExpected1.hs  Case.hs  Control.hs  DerivingOC.hs  DoubleForall.hs  EmptyMostly.hs  EmptyMostlyTrailing.hs  ExplicitNamespaces.hs  Expr.hs  FunDeps.hs  GADTContext.hs  Hang.hs  HsDo.hs  ImportsSemi.hs  MachineTypes.hs  Mixed.hs  ModuleOnly.hs  MultiImplicitParams.hs  NestedDoLambda.hs  OveridingPrimitives.hs  PatSigBind.hs  Ppr006a.hs  Process.hs  Process1.hs  RankNTypes.hs  RdrNames.hs  RecordWildcard.hs  Simple.hs  SlidingDataClassDecl.hs  SlidingDoClause.hs  SlidingListComp.hs  Splice.hs  SpliceSemi.hs  Tuple.hs  TypeInstance.hs  Unboxed.hs  Undefined7.hs  Warning.hs  patter
tests/examples/ghc710-only/: DataDecl.hs  HashQQ.hs  QuasiQuote.hs  TypeFamilies.hs
tests/examples/ghc8/: AddParams2.hs  Class.hs  Classes.hs  Deprecation.hs  ForFree.hs  Generic.hs  List2.hs  Manipulate.hs  MultiQuote.hs  RulePragma.hs  T10041.hs  T10615.hs  T10638.hs  T10819.hs  T4056.hs  T4170.hs  T6062.hs  T8455.hs  TH_bracket1.hs  TH_bracket3.hs  TH_ppr1.hs  TH_repE1.hs  TH_repE3.hs  TH_spliceE5_prof_ext.hs  Tuple.hs  UnicodeSyntax.hs  export-super-class-fail.hs  export-super-class.hs  export-type.hs  poly-export.hs  poly-export2.hs
tests/examples/ghc80/: Families.hs  Query.hs  SemicolonIf.hs  Structure8a.hs  T9824.hs  TH_bracket2.hs  TH_scope.hs  TH_spliceE5_prof_ext_Lib.hs  TestUtils.hs  Zwaluw.hs
tests/examples/ghc810/: T3391.hs  TH_scope.hs  TH_unresolvedInfix_Lib.hs  mod181.hs  saks029.hs
tests/examples/ghc82/: completesig01.hs
tests/examples/ghc84/: Functors.hs  Main.hs
tests/examples/ghc86/: Arith.hs  BadTelescope2.hs  BadTelescope4.hs  BinDU.hs  Boot1.hs  ConDeclEmptyCtx.hs  Dial.hs  GADT.hs  HashTab.hs  Parser.hs  RAE_T32b.hs  Rae31.hs  ST.hs  T10134a.hs  T10279.hs  T10638.hs  T10819.hs  T10891.hs  T10934.hs  T11142.hs  T14164.hs  T14650.hs  T2632.hs  T3263-2.hs  T3391.hs  T3572.hs  T4056.hs  T4169.hs  T5217.hs  T6018th.hs  T6062.hs  T8455.hs  T8759a.hs  T9367.hs  T9662.hs  TH_abstractFamily.hs  TH_bracket1.hs  TH_bracket2.hs  TH_dataD1.hs  TH_localname.hs  (+30 more)
tests/examples/ghc88/: DumpParsedAst.hs  Exp.hs  ExplicitForAllRules1.hs  Internal.hs  StarBinder.hs  T13087.hs  T15365.hs  T4437.hs  TH_reifyDecl1.hs  Utils.hs
tests/examples/ghc90/: ArrowLambdaCase.hs  BaseDescriptor.hs  BaseDescriptor2.hs  ExplicitSpecificity4.hs  FromManual.hs  Linear10.hs  Linear12.hs  Linear1Rule.hs  Linear4.hs  Linear6.hs  Linear8.hs  LinearConstructors.hs  LinearEmptyCase.hs  LinearGuards.hs  Pr110.hs  Stream.hs  T17544_kw.hs  T18023.hs  T18522-dbg-ppr.hs  TH_reifyLinear.hs  qdocompile001.hs  qdocompile002.hs  qdorun001.hs  qdorun002.hs  qdorun003.hs  qdorun005.hs  qdorun007.hs
tests/examples/ghc910/: AnnotationNoListTuplePuns.hs  ByHand.hs  Cfipu.hs  Class.hs  ConPat.hs  ConstructorArgs.hs  CppComment.hs  Disambiguate.hs  Domino.hs  ErrorSpec.hs  Expression.hs  Generate.hs  GenerateBug.hs  Generic.hs  Internal.hs  Lexing.hs  LinearLet.hs  Sum.hs  (+15 more)
tests/hackage/: RoundTripHackage.hs  get.sh
(+720 files in other folders)
